# rise

./: .gitignore  CMakeLists.txt  README.md  dotp.thorin  test.thorin
dialects/: CMakeLists.txt
dialects/rise/: normalizers.cpp  rise.cpp  rise.h  rise.thorin
rise/: rise.cpp  rise.thorin  test.cpp
src/: CMakeLists.txt
src/thorin/: CMakeLists.txt
src/thorin/plug/: CMakeLists.txt
src/thorin/plug/rise/: CMakeLists.txt  normalizers.cpp  rise.cpp  rise.thorin
